--- a/pages/ap/h4.html
+++ b/pages/ap/h4.html
@@ -8,6 +8,10 @@
     <title>TPL</title>
 </head>
 <body>
+  <div class="mobile-menu">
+    <button id="menu-button" class="menu-button">☰</button>
+</div>
+<script src="../../script.js"></script>
     <div class="container">
         <nav class="sidebar">
             <ul>
