--- a/pages/ap/h5.html
+++ b/pages/ap/h5.html
@@ -29,7 +29,9 @@
         </nav>
         <div class="content">
             <h1>Leertheorieën</h1>
-            <p> Om deze concepten snel te leren, kun je verder naar beneden scrollen en flashcards doornemen. Zo leer je de belangrijke termen sneller.</p>
+            <p>
+              <a href="#target-div" class="scroll-button">Flash Cards</a>
+          </p>
             <section class="section-container">
               <div class="flex-container">
                 <div class="about-text">
@@ -66,6 +68,7 @@
             </section>
             
               <h1>Flash Cards</h1>
+              <div id="target-div" class="target-div"></div>
             <orbit-reviewarea color="blue">
               <orbit-prompt
   question="Wat is Bekrachtiger?"
