--- a/pages/ap/h2.html
+++ b/pages/ap/h2.html
@@ -29,7 +29,13 @@
         </nav>
         <div class="content">
             <h1>Biologische psychologie</h1>
-            <p>Flash Cards</p>
+            <p>
+              <a href="#target-div" class="scroll-button">Flash Cards</a>
+          </p>
+
+
+<div id="target-div" class="target-div"></div>
+
             <orbit-reviewarea color="blue">
               <orbit-prompt
   question="Wat is Actiepotentiaal?"
