--- a/pages/ap/h4.html
+++ b/pages/ap/h4.html
@@ -29,7 +29,12 @@
         </nav>
         <div class="content">
             <h1>Motivatie & emotie</h1>
-            <p>Flash Cards</p>
+            <p>
+              <a href="#target-div" class="scroll-button">Flash Cards</a>
+          </p>
+
+
+<div id="target-div" class="target-div"></div>
             <orbit-reviewarea color="blue">
               <orbit-prompt
   question="Wat is Anorexia nervosa?"
