--- a/pages/ap/h7.html
+++ b/pages/ap/h7.html
@@ -29,7 +29,14 @@
         </nav>
         <div class="content">
             <h1>Intelligentie</h1>
-            <p>Flash Cards</p>
+            <p>
+              <a href="#target-div" class="scroll-button">Flash Cards</a>
+          </p>
+
+
+
+          
+<div id="target-div" class="target-div"></div>
             <orbit-reviewarea color="blue">
               <orbit-prompt
               question="Wat is Algoritme?"
