Only biologie to go

--- a/pages/ap/h2.html
+++ b/pages/ap/h2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../style.css">
     <script type="module" src="https://js.withorbit.com/orbit-web-component.js"></script>
-    <title>TPL</title>
+    <title>TPL - Biologische psychologie</title>
 </head>
 <body>
   <div class="mobile-menu">
