--- a/pages/ap/h4.html
+++ b/pages/ap/h4.html
@@ -74,8 +74,7 @@
             <p><strong>Overrechtvaardiging</strong> kan optreden wanneer externe beloningen de intrinsieke motivatie verminderen, met name als deze beloningen worden toegekend zonder rekening te houden met de prestatiekwaliteit.</p>
             
             <h2>Locus of Control</h2>
-            <p><strong>Locus of Control</strong> is een concept dat beschrijft hoe mensen de controle over hun leven waarnemen. Een <strong>interne locus of control</strong> betekent dat men gelooft zelf controle te hebben, terwijl een <strong>externe locus of control</strong> wijst op de overtuiging dat externe factoren overheersen.</p>
-            </section>
+            <p><strong>Locus of Control</strong> beschrijft hoe mensen de controle over hun leven zien. Een <strong>interne locus of control</strong> betekent zelfcontrole, terwijl een <strong>externe locus of control</strong> wijst op externe invloeden. Een sterke externe locus kan leiden tot een slachtofferrol, waarbij mensen hun leven toeschrijven aan externe omstandigheden in plaats van hun eigen keuzes.</p>
 
 
    <section class="section-container">
