--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 
                 <li><h1><a href="index.html">Toegepaste Psychologie Leren</a></h1></li>
                 <li><h3><a href="pages/ap/h1.html">Algemene psychologie</h3></a></li>
-                <li><h3><a href="pages/pp/h1.html">Psychiatrie</h3></a></li>
+                <li><h3><a href="pages/pp/h1.html">Psychiatrie(Volwassenen)</h3></a></li>
+                <li><h3><a href="pages/dj/h1.html">Psychiatrie(Jeugd)</h3></a></li>
 
             </ul>
         </nav>
