--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <ul>
                 
                 <li><h1><a href="index.html">Toegepaste Psychologie Leren</a></h1></li>
-                <li><h3><a href="pages/ap/h1.html">Algemene psychologie</h3></a></li>
-                <li><h3><a href="pages/pp/h1.html">Psychiatrie(Volwassenen)</h3></a></li>
-                <li><h3><a href="pages/dj/h1.html">Psychiatrie(Jeugd)</h3></a></li>
+                <li><h3><a href="module/AlgemenePsychologie/h1.html">Algemene psychologie</h3></a></li>
+                <li><h3><a href="module/DoelgroepVolwassen/h1.html">Psychiatrie(Volwassenen)</h3></a></li>
+                <li><h3><a href="module/DoelgroepJeugd/h1.html">Psychiatrie(Jeugd)</h3></a></li>
+                <li><h3><a href="module/OntwikkelingsPsychologie/h1.html">Ontwikkelingspsychologie</h3></a></li>
 
             </ul>
         </nav>
